# fan-speed

./: CMakeLists.txt  README.md
ctrlbrd/: CMakeLists.txt
ctrlbrd/domain/: CMakeLists.txt
ctrlbrd/domain/include/ctrl/: fan_ctrl_brd.h  fan_ctrl_config.h
ctrlbrd/domain/include/fan/: auto_fan_brd_mode.h  fan_brd.h  fan_brd_adjuster.h  fan_brd_changer.h  fan_brd_listener.h  fan_brd_mode.h  fan_brd_spec.h  fan_brd_state.h  manual_fan_brd_mode.h
ctrlbrd/domain/include/srv/: srv_brd.h  srv_brd_listener.h
ctrlbrd/domain/src/ctrl/: fan_brd_list.cc  fan_brd_list.h  fan_ctrl_alert.cc  fan_ctrl_alert.h  fan_ctrl_brd.cc  fan_ctrl_sender.cc  fan_ctrl_sender.h  rs581_fan_ctrl_sender.cc  rs581_fan_ctrl_sender.h  spi_fan_ctrl_sender.cc  spi_fan_ctrl_sender.h
ctrlbrd/domain/src/fan/: auto_fan_brd_mode.cc  auto_fan_brd_mode.h  fan_brd_adjuster.cc  fan_brd_changer.cc  fan_brd_mode.cc  fan_brd_state.cc  manual_fan_brd_mode.cc  manual_fan_brd_mode.h  srv_brd_list.cc  srv_brd_list.h
ctrlbrd/domain/src/srv/: srv_brd.cc
ctrlbrd/domain/test/: CMakeLists.txt
ctrlbrd/service/: CMakeLists.txt
ctrlbrd/service/include/: fan_brd_action.h
ctrlbrd/service/src/: fan_brd_action.cc
fanbrd/domain/: CMakeLists.txt
fanbrd/domain/include/: fan_brd.h  fan_config.h  fan_unit.h
fanbrd/domain/src/: fan_box.cc  fan_box.h  fan_brd.cc  fan_drv.cc  fan_drv.h  fan_notifier.cc  fan_notifier.h  fan_state.cc  fan_state.h
fanbrd/domain/src/avc/: avc_v1_fan_drv.cc  avc_v1_fan_drv.h  avc_v2_fan_drv.cc  avc_v2_fan_drv.h
fanbrd/domain/src/nidec/: nidec_fan_drv.cc  nidec_fan_drv.h  nidec_fan_drv_adapter.cc  nidec_fan_drv_adapter.h
fanbrd/domain/test/: CMakeLists.txt
fanbrd/service/: CMakeLists.txt
fanbrd/service/include/: fan_brd_action.h  fan_brd_report.h
fanbrd/service/src/: fan_brd_action.cc  fan_brd_report.cc
infra/: CMakeLists.txt
infra/include/: array_size.h  assertions.h  externc.h  keywords.h  period_hook.h  period_task.h  placement.h  status.h  types.h
infra/src/: period_task.cc
pub/: CMakeLists.txt  pub_ctrbrd_fanbrd_event.h  pub_ctrbrd_fanbrd_itf.h
